--- a/ios/PAWPAWTracker/Info.plist
+++ b/ios/PAWPAWTracker/Info.plist
@@ -22,6 +22,7 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>NSPhotoLibraryUsageDescription</key>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
