--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "date-fns": "^2.29.3",
     "react": "18.1.0",
-    "react-native": "0.70.4"
+    "react-native": "0.70.4",
+    "react-native-date-picker": "^4.2.6",
+    "react-native-image-picker": "^4.10.0",
+    "react-native-linear-gradient": "^2.6.2",
+    "react-native-svg": "^13.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
