--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-navigation/bottom-tabs": "^6.4.0",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.1",
     "date-fns": "^2.29.3",
     "react": "18.1.0",
     "react-native": "0.70.4",
     "react-native-date-picker": "^4.2.6",
     "react-native-image-picker": "^4.10.0",
     "react-native-linear-gradient": "^2.6.2",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.2",
     "react-native-svg": "^13.5.0"
   },
   "devDependencies": {
