--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pawpawtracker",
-  "version": "0.0.1",
+  "version": "1.0.1",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -39,6 +39,7 @@
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "0.72.3",
+    "react-native-version": "^4.0.0",
     "react-test-renderer": "18.1.0",
     "typescript": "^4.8.3"
   },
