--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "postversion": "npx react-native-version --never-amend"
+    "postversion": "npx react-native-version "
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.11",
