--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "date-fns": "^2.29.3",
     "react": "18.1.0",
     "react-native": "0.70.4",
+    "react-native-animatable": "^1.3.3",
     "react-native-date-picker": "^4.2.6",
     "react-native-image-picker": "^4.10.0",
     "react-native-linear-gradient": "^2.6.2",
