--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-native-linear-gradient": "^2.6.2",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
-    "react-native-svg": "^13.5.0"
+    "react-native-svg": "^13.5.0",
+    "react-navigation-shared-element": "^3.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
