--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
@@ -20,12 +21,12 @@
     "react-native": "0.70.4",
     "react-native-animatable": "^1.3.3",
     "react-native-date-picker": "^4.2.6",
+    "react-native-drop-shadow": "^0.0.6",
     "react-native-image-picker": "^4.10.0",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
-    "react-native-svg": "^13.5.0",
-    "react-navigation-shared-element": "^3.1.3"
+    "react-native-svg": "^13.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
