--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-animatable": "^1.3.3",
     "react-native-date-picker": "^4.2.6",
     "react-native-drop-shadow": "^0.0.6",
+    "react-native-dropdown-picker": "^5.4.3",
     "react-native-image-picker": "^4.10.0",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-safe-area-context": "^4.4.1",
