--- a/.github/workflows/deploy-production.yaml
+++ b/.github/workflows/deploy-production.yaml
@@ -41,27 +41,27 @@ jobs:
       PLATFORM: android
       PROFILE: production
 
-  build-ios:
-    name: Install and build ios app (Production)
-    needs: patch-version
-    uses: ./.github/workflows/eas-build.yaml
-    secrets: inherit
-    with:
-      PLATFORM: ios
-      PROFILE: Production
+  # build-ios:
+  #   name: Install and build ios app (Production)
+  #   needs: patch-version
+  #   uses: ./.github/workflows/eas-build.yaml
+  #   secrets: inherit
+  #   with:
+  #     PLATFORM: ios
+  #     PROFILE: Production
 
-  submit-android:
-    name: Submit android app to Play Store
-    needs: build-android
-    uses: ./.github/workflows/eas-submit.yaml
-    secrets: inherit
-    with:
-      PLATFORM: android
+  # submit-android:
+  #   name: Submit android app to Play Store
+  #   needs: build-android
+  #   uses: ./.github/workflows/eas-submit.yaml
+  #   secrets: inherit
+  #   with:
+  #     PLATFORM: android
 
-  submit-ios:
-    name: Submit ios app to AppStore
-    needs: build-ios
-    uses: ./.github/workflows/eas-submit.yaml
-    secrets: inherit
-    with:
-      PLATFORM: ios
+  # submit-ios:
+  #   name: Submit ios app to AppStore
+  #   needs: build-ios
+  #   uses: ./.github/workflows/eas-submit.yaml
+  #   secrets: inherit
+  #   with:
+  #     PLATFORM: ios
